:bug: Fix overflow issue on navbar.

--- a/assets/scss/jellyfish/components/_nav.scss
+++ b/assets/scss/jellyfish/components/_nav.scss
@@ -35,7 +35,7 @@
   *~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
   width: $navbar-container-width;
   max-width: 100%;
-  overflow-y: scroll;
+  //overflow-y: scroll;
     @include below($nav-expands) {
       padding: 0 $navbar-container-padding;
       display: block;
